--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,34 @@
 body{
     font-family: Arial, sans-serif;
-    background-color: #252625
+    background-color: #4c4f4d
 }
 
 h1 {
-    color: purple;
+    color: #043b12;
     text-align: center;
+}
+
+/* Navigation Bar Styling */
+.topnav{
+    background-color: orange;
+    overflow: hidden;
+}
+
+.topnav a{
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover{
+    background-color: white;
+    color: purple;
+}
+
+.topnav a:active{
+    background-color: yellow;
+    color: white;
 }
