--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,21 @@
 body{
     font-family: Arial, sans-serif;
-    background-color: #4c4f4d
+    background-color: #013d38
 }
 
 h1 {
-    color: #043b12;
+    color: #01796f;
+    text-align: center;
+}
+
+h2 {
+    color: #002421;
     text-align: center;
 }
 
 /* Navigation Bar Styling */
 .topnav{
-    background-color: orange;
+    background-image: linear-gradient(90deg, #e619d4, #4619e6);
     overflow: hidden;
 }
 
@@ -24,11 +29,11 @@ h1 {
 }
 
 .topnav a:hover{
-    background-color: white;
-    color: purple;
+    background-color: #aa9ae3;
+    color: black;
 }
 
 .topnav a:active{
-    background-color: yellow;
+    background-color: #5d547d;
     color: white;
 }
