--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,11 @@ h2 {
     background-color: #5d547d;
     color: white;
 }
+
+.welcome{
+    font-family: "Lexend", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+    color: white;
+}
