--- a/highcontrast.css
+++ b/highcontrast.css
@@ -17,7 +17,7 @@ h2 {
 /* Navigation Bar Styling */
 .topnav{
     position: relative;
-    background-image: linear-gradient(90deg, #e619d4, #4619e6);
+    background-image: linear-gradient(90deg, white, grey);
     overflow: hidden;
 }
 
