--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     font-family: Arial, sans-serif;
-    background-color: #013d38
+    background-color: #203C39;
 }
 
 h1 {
@@ -16,7 +16,7 @@ h2 {
 /* Navigation Bar Styling */
 .topnav{
     position: relative;
-    background-image: linear-gradient(90deg, #e619d4, #4619e6);
+    background-color: #CFCCBE;
     overflow: hidden;
 }
 
