--- a/winter.css
+++ b/winter.css
@@ -16,16 +16,18 @@ h2 {
 
 /* Navigation Bar Styling */
 .topnav{
-    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
     background-image: linear-gradient(90deg, white, blue);
-    overflow: hidden;
+    padding: 0.5rem;
 }
 
 .topnav a{
-    float: left;
     color: black;
     text-align: center;
-    padding: 14px 16px;
+    padding: 10px 12px;
     text-decoration: none;
     font-size: 17px;
 }
