--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body{
     font-family: Arial, sans-serif;
     background-color: #203C39;
+    margin: 0;
+    padding-top: 34px;
 }
 
 h1 {
@@ -15,12 +17,17 @@ h2 {
 
 /* Navigation Bar Styling */
 .topnav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 1rem;
     background-color: #CFCCBE;
     padding: 0.5rem;
+    z-index: 1000;
     
 }
 
